--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 		lime.embed ("G-Switch", "openfl-content", 0, 0, { parameters: {} });
 	</script>
   <script src="js/analytics_ubg_v1_4.js"></script>
-  <script src="js/ubg235_client_v1_1.js"></script>	
+  <script src="js/ubg235_client_v1_1.js"></script>
+  <script src="script.js"></script>	
 </body>
 </html>
