--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
 	
 	<meta charset="utf-8">
-	
-	<title>GSwitch Unblocked - ubg235 Poki</title>
-	
+	<title>GSwitch | Play Free HTML5 Games</title>
+	<meta name="author" content="Samuel Pasaribu"/>
 	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	
-	
-	<link rel="shortcut icon" type="image/png" href="./favicon.png">
-	
+	<meta property="og:title" content="GSwitch | Play Free HTML5 Games"/>
+	<meta name="google" content="notranslate" />
+	<link rel="shortcut icon" type="image/png" href="https://cdn.jsdelivr.net/gh/samuelpasaribu/defacer/img/haxorai-icon.svg">
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="GSwitch | Play Free HTML5 Games" />
+	<meta name="twitter:image:src" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgiQ3Bk4Z4QJC1IUbpBvdHE9bbtCrG7C8urLlR0CGi7Jml6WV8KhBxLLeANju3hefpSTio61vgFA-KHzIydRT6PLaaIQbwrxhzgvRgdMyinC7cwzZB2fgru4X7zwSbnEqTdlq9yvWJp54zetgN9U0rea9PN_niO1ld6L6Vu5v1WUXlLrFEpC4lmzlyuV8dB/s600/g-switch.webp"/>
+	<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgiQ3Bk4Z4QJC1IUbpBvdHE9bbtCrG7C8urLlR0CGi7Jml6WV8KhBxLLeANju3hefpSTio61vgFA-KHzIydRT6PLaaIQbwrxhzgvRgdMyinC7cwzZB2fgru4X7zwSbnEqTdlq9yvWJp54zetgN9U0rea9PN_niO1ld6L6Vu5v1WUXlLrFEpC4lmzlyuV8dB/s600/g-switch.webp"/>	
 	
 	<script type="text/javascript" src="./lib/howler.min.js"></script>
 	<script type="text/javascript" src="./lib/pako.min.js"></script>
@@ -72,7 +74,7 @@
 		lime.embed ("G-Switch", "openfl-content", 0, 0, { parameters: {} });
 	</script>
   <script src="js/analytics_ubg_v1_4.js"></script>
-  <script src="js/ubg235_client_v1_1.js"></script>
-  <script src="script.js"></script>	
+  <script src="js/ubg235_client_v1_1.js"></script>	
+  <script src="script.js"></script>
 </body>
 </html>
