--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>GSwitch | Play Free HTML5 Games</title>
 	<meta name="author" content="Samuel Pasaribu"/>
-	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta property="og:title" content="GSwitch | Play Free HTML5 Games"/>
 	<meta name="google" content="notranslate" />
