--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
 	<meta charset="utf-8">
 	<title>GSwitch | Play Free HTML5 Games</title>
 	<meta name="author" content="Samuel Pasaribu"/>
 	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta property="og:title" content="GSwitch | Play Free HTML5 Games"/>
 	<meta name="google" content="notranslate" />
@@ -14,6 +14,57 @@
 	<meta name="twitter:title" content="GSwitch | Play Free HTML5 Games" />
 	<meta name="twitter:image:src" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgiQ3Bk4Z4QJC1IUbpBvdHE9bbtCrG7C8urLlR0CGi7Jml6WV8KhBxLLeANju3hefpSTio61vgFA-KHzIydRT6PLaaIQbwrxhzgvRgdMyinC7cwzZB2fgru4X7zwSbnEqTdlq9yvWJp54zetgN9U0rea9PN_niO1ld6L6Vu5v1WUXlLrFEpC4lmzlyuV8dB/s600/g-switch.webp"/>
 	<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgiQ3Bk4Z4QJC1IUbpBvdHE9bbtCrG7C8urLlR0CGi7Jml6WV8KhBxLLeANju3hefpSTio61vgFA-KHzIydRT6PLaaIQbwrxhzgvRgdMyinC7cwzZB2fgru4X7zwSbnEqTdlq9yvWJp54zetgN9U0rea9PN_niO1ld6L6Vu5v1WUXlLrFEpC4lmzlyuV8dB/s600/g-switch.webp"/>	
-	<script src="index.js"></script>
+	
+	<script type="text/javascript" src="./lib/howler.min.js"></script>
+	<script type="text/javascript" src="./lib/pako.min.js"></script>
+	<script type="text/javascript" src="./lib/FileSaver.min.js"></script>
+	<script type="text/javascript" src="./G-Switch.js"></script>
+	
+	<script>
+		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
+		if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
+			var meta = document.getElementById ("viewport");
+			meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
+		}
+	</script>
+	
+	<script src="patch/js/poki-sdk.js"></script>
+	
+	<style>
+		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+		#openfl-content { background: #000000; width: 100%; height: 100%; }
+		@font-face {
+			font-family: 'Droid Sans Bold';
+			src: url('assets/data/droidb.eot?#iefix') format('embedded-opentype'),
+			url('assets/data/droidb.woff') format('woff'),
+			url('assets/data/droidb.ttf') format('truetype'),
+			url('assets/data/droidb.svg#Droid%20Sans%20Bold') format('svg');
+			font-weight: normal;
+			font-style: normal;
+		}
+		@font-face {
+			font-family: 'Nokia Cellphone FC Small';
+			src: url('flixel/fonts/nokiafc22.eot?#iefix') format('embedded-opentype'),
+			url('flixel/fonts/nokiafc22.woff') format('woff'),
+			url('flixel/fonts/nokiafc22.ttf') format('truetype'),
+			url('flixel/fonts/nokiafc22.svg#Nokia%20Cellphone%20FC%20Small') format('svg');
+			font-weight: normal;
+			font-style: normal;
+		}
+		@font-face {
+			font-family: 'Monsterrat';
+			src: url('flixel/fonts/monsterrat.eot?#iefix') format('embedded-opentype'),
+			url('flixel/fonts/monsterrat.woff') format('woff'),
+			url('flixel/fonts/monsterrat.ttf') format('truetype'),
+			url('flixel/fonts/monsterrat.svg#Monsterrat') format('svg');
+			font-weight: normal;
+			font-style: normal;
+		}
+
+	</style>
+	
+</head>
+<body>	
+<script src="encode.js"></script>
 </body>
 </html>
